<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAppPortfolio</string>
    <string name="my_title">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="button1_label">Spotify Streamer</string>
    <string name="button2_label">Scores App</string>
    <string name="button3_label">Library App</string>
    <string name="button4_label">Build It Bigger</string>
    <string name="button5_label">XYZ Reader</string>
    <string name="button6_label">Capstone</string>

</resources>
