<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1"
    style="@style/bgColor"
    >

    <TextView android:text="@string/my_title"
        style="@style/textField"
        android:gravity="center"
        android:id="@+id/textView"
        android:textSize="20dp" />

    <Button
        android:text="@string/button1_label"
        style="@style/standardButton"
        android:layout_below="@+id/textView"
        android:id="@+id/button1"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/button2_label"
        style="@style/standardButton"
        android:layout_below="@+id/button1"
        android:id="@+id/button2"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/button3_label"
        style="@style/standardButton"
        android:layout_below="@+id/button2"
        android:id="@+id/button3"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/button4_label"
        style="@style/standardButton"
        android:layout_below="@+id/button3"
        android:id="@+id/button4"
        android:onClick="displayMessage"
    />

    <Button
        android:text="@string/button5_label"
        style="@style/standardButton"
        android:layout_below="@+id/button4"
        android:id="@+id/button5"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/button6_label"
        style="@style/importantButton"
        android:layout_below="@+id/button5"
        android:id="@+id/button6"
        android:onClick="displayMessage" />

</RelativeLayout>
